--- a/app.json
+++ b/app.json
@@ -31,6 +31,7 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/cartify-splash-light.png",
+          "size": 40,
           "resizeMode": "contain",
           "backgroundColor": "#0a0008"
         }
